# claude-fde-showcase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_skills/doc_summariser/: SKILL.md  helper.py
docs/: agent_skills.md  evaluation.md  forward_deployed_engineering.md  mcp.md  subagents.md
src/claude_fde_showcase/: __init__.py
src/claude_fde_showcase/mcp_server/: server.py
src/claude_fde_showcase/tools/: __init__.py  calculator.py  search.py  summarise.py
subagents/: __init__.py  orchestrator.py
tests/: test_calculator.py  test_orchestrator.py  test_search.py  test_smoke.py  test_summarise.py
