[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-fde-showcase"
version = "0.1.0"
description = "Skeleton demo of the Forward Deployed Engineer / Applied AI skillset: MCP servers, sub-agents, and agent skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yousef Qasim", email = "yqasem10@gmail.com" }]
keywords = ["mcp", "claude", "agents", "applied-ai", "forward-deployed-engineer"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
claude-fde-mcp = "claude_fde_showcase.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_fde_showcase", "subagents", "agent_skills"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
